--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/media.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -39,6 +40,11 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="mobile-menu-open">
+          <svg class="mobile-menu-open_icon" width="32" height="22">
+            <use class="burger" href="/images/icons.svg#icon-menu-burger"></use>
+          </svg>
+        </button>
 
         <!-- Contact information -->
         <address class="contacts">
@@ -56,23 +62,45 @@
           </ul>
         </address>
       </div>
+      <div class="mobile-menu">
+        <button class="mobile-menu_close-btn">
+          <svg class="mobile-menu_close-icon" width="8" height="8">
+            <use href="./images/icon.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
     </header>
 
     <!-- Main -->
     <main>
       <!-- Hero -->
 
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Advantages -->
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="advantages-wrapper container">
           <h2 class="visually-hidden section-title">Our advantages</h2>
           <ul class="list advantages-list">
@@ -130,10 +158,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Competence -->
-      <section class="competence">
+      <!-- <section class="competence">
         <div class="competence-wrapper container">
           <h2 class="section-title competence-title">What are we doing</h2>
           <ul class="list competence-list">
@@ -163,10 +191,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Team -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="team-wrapper container">
           <h2 class="section-title team-title">Our Team</h2>
           <ul class="list team-list">
@@ -340,10 +368,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Clients -->
-      <section class="clients">
+      <!-- <section class="clients">
         <div class="clients-wraper container">
           <h2 class="clients-title section-title">Customers</h2>
           <ul class="clients-list list">
@@ -385,11 +413,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="ftr-list container">
         <div class="usage">
           <a class="ftr-logo logo link" href="./index.html"
@@ -453,10 +481,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
@@ -532,8 +560,8 @@
           <button class="hero-btn send" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
