--- a/portfolio.html
+++ b/portfolio.html
@@ -297,6 +297,7 @@
       </section>
     </main>
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="ftr-list container">
         <div class="usage">
@@ -352,10 +353,12 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-btn" type="submit">Subscribe</button>
-            <svg class="letter" width="24" height="24">
-              <use href="./images/icons.svg#icon-subscribe"></use>
-            </svg>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="letter" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
