--- a/index.html
+++ b/index.html
@@ -300,51 +300,30 @@
           <ul class="works-list list">
             <li class="product-item">
               <img
+                srcset="./images/examples/ex1@2x.jpg 2x"
                 src="./images/examples/ex1.jpg"
                 alt="desktop view"
                 width="360"
                 height="300"
               />
-              <!-- <img
-                srcset="./images/wd1@2x.jpg 2x"
-                class="photo"
-                src="./images/wd1.jpg"
-                alt="Computer"
-                width="360"
-                height="300"
-              /> -->
             </li>
             <li class="product-item">
               <img
+                srcset="./images/examples/ex2@2x.jpg 2x"
                 src="./images/examples/ex2.jpg"
                 alt="visualization"
                 width="360"
                 height="300"
               />
-              <!-- <img
-                srcset="./images/wd2@2x.jpg 2x"
-                class="photo"
-                src="./images/wd2.jpg"
-                alt="Phones"
-                width="360"
-                height="300"
-              /> -->
             </li>
             <li class="product-item">
               <img
+                srcset="./images/examples/ex3@2x.jpg 2x"
                 src="./images/examples/ex3.jpg"
                 alt="mobile view"
                 width="360"
                 height="300"
               />
-              <!-- <img
-                srcset="./images/wd3@2x.jpg 2x"
-                class="photo"
-                src="./images/wd3.jpg"
-                alt="Apps"
-                width="360"
-                height="300"
-              /> -->
             </li>
           </ul>
         </div>
@@ -356,18 +335,12 @@
           <ul class="team-list">
             <li class="team-item list">
               <img
+                srcset="./images/employees/mark1@2x.jpg 2x"
                 src="./images/employees/mark1.jpg"
                 alt="inspiring Mark"
                 width="264"
                 height="260"
               />
-              <!-- <img
-                srcset="./images/team/markguerrero@2x.jpg 2x"
-                src="./images/team/markguerrero.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              /> -->
 
               <div class="team-border">
                 <h3 class="team-names">Mark Guerrero</h3>
@@ -405,18 +378,13 @@
             </li>
             <li class="team-item list">
               <img
+                srcset="./images/employees/tom2@2x.jpg 2x"
                 src="./images/employees/tom2.jpg"
                 alt="energetic Tom"
                 width="264"
                 height="260"
               />
-              <!-- <img
-                srcset="./images/team/tomford@2x.jpg 2x"
-                src="./images/team/tomford.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              /> -->
+
               <div class="team-border">
                 <h3 class="team-names">Tom Ford</h3>
                 <p class="team-role">Frontend Developer</p>
@@ -453,18 +421,13 @@
             </li>
             <li class="team-item list">
               <img
+                srcset="./images/employees/camila3@2x.jpg 2x"
                 src="./images/employees/camila3.jpg"
                 alt="charming Camila"
                 width="264"
                 height="260"
               />
-              <!-- <img
-                srcset="./images/team/camilagarcia@2x.jpg 2x"
-                src="./images/team/camilagarcia.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              /> -->
+
               <div class="team-border">
                 <h3 class="team-names">Camila Garcia</h3>
                 <p class="team-role">Marketing</p>
@@ -501,18 +464,13 @@
             </li>
             <li class="team-item list">
               <img
+                srcset="./images/employees/daniel4@2x.jpg 2x"
                 src="./images/employees/daniel4.jpg"
                 alt="creative Daniel"
                 width="264"
                 height="260"
               />
-              <!-- <img
-                srcset="./images/team/danielwilson@2x.jpg 2x"
-                src="./images/team/danielwilson.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              /> -->
+
               <div class="team-border">
                 <h3 class="team-names">Daniel Wilson</h3>
                 <p class="team-role">UI Designer</p>
