--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       <!-- Clients -->
       <section class="our-customers">
         <div class="container cust">
-          <h2 class="section-title cust">Customers</h2>
+          <h2 class="section-title">Customers</h2>
           <ul class="customers list">
             <li class="border-icon-cust">
               <a class="customers-link" href=""
@@ -569,7 +569,7 @@
           </p>
         </div>
         <div class="footer-social">
-          <h3 class="footer-title">Social media</h3>
+          <p class="footer-title">Social media</p>
           <ul class="social-card-footer">
             <li class="soc list">
               <a class="social-link-footer" href="#">
@@ -602,7 +602,7 @@
         </div>
         <div class="form-footer-cont">
           <form class="form-footer">
-            <h3 class="footer-title">Subscribe</h3>
+            <p class="footer-title">Subscribe</p>
             <input class="input-footer" type="email" placeholder="Email" />
             <button class="subscribe-button" type="submit">
               Subscribe
